@@ -50,6 +50,7 @@ Revision history for Perl module Math::Prime::Util::GMP
     - lucasvmod(P,Q,k,n)       modular Lucas V value
     - lucasuvmod(P,Q,k,n)      (U(P,Q)_k mod n, V(P,Q)_k mod n)
     - lucasuv(P,Q,k)           Lucas sequence  (U(P,Q)_k, V(P,Q)_k)
+    - cheb_factor              Unexported, factoring smooth p-1/p+1
 
     [FIXES]
 
@@ -88,6 +89,8 @@ Revision history for Perl module Math::Prime::Util::GMP
       by bernvec or faulhaber_sum.
 
     - Add faster factorialmod code.  5-10x faster for large inputs.
+
+    - factoring with many small factors, e.g. a factorial, is much faster.
 
     [OTHER]
 
